@@ -69,3 +69,5 @@ issue 40:
 
 issue 42:
     bug: crafting system does not work in rebuild mode
+
+[43]
