@@ -20,7 +20,7 @@ class State:
     def __init__(self):
         self.parts = self.get_parts()
         G.statehandler.add_state(self)
-        self.eventbus = G.eventhandler.create_bus(active=False)
+        self.eventbus = G.eventhandler.create_bus(active=False, crash_on_error=False)
         self.bind_to_eventbus()
         for statepart in self.parts:
             statepart.master = [self]  # StateParts get an list of steps to get to them as an list
